@@ -1,0 +1,10 @@
+<header>Additional files to rotate</header>
+
+This option allows you to specify files to perform log rotation on in addition
+to the default Apache access and error logs. This can be useful if your
+virtual servers have an additional log file set, such as for PHP. <p>
+
+<include subs>
+
+<footer>
+
