@@ -2532,7 +2532,10 @@ tmpl_ftp=ProFTPd directives for new servers
 tmpl_ftpbelow=Directives below ..
 tmpl_webbelow=Apache directives below ..
 tmpl_logrotate=Logrotate directives for new servers
+tmpl_logrotate_files=Additional files to rotate
 tmpl_logrotatenone=Automatic
+tmpl_logrotatenone2=Just Apache logs
+tmpl_ftpbelow2=Log files below
 tmpl_dns=BIND DNS records for new domains
 tmpl_dnsns=Additional manually configured nameservers
 tmpl_dnsrecords=Address records for new domains
