@@ -1178,3 +1178,4 @@ When a virtual server is disabled, all extra admin logins are disabled too.
 When a mailbox user is delete, his Dovecot index and control files are removed too in order to avoid clashes with future users with the same name.
 Added a Module Config setting to make collection of all available packages optional.
 Added the list-php-ini API command for fetching PHP settings from one or more domains.
+Added a logrotate template-level option for additional files to rotate for new domains.
